# generic_ml

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
src/: __init__.py  exception.py
src/components/: data_ingestion.py
