[tool.poetry]
name = "generic-ml"
version = "0.1.0"
description = ""
authors = ["Shrihari-Nair <shriharinair@htic.iitm.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
