[tool.poetry]
name = "generic-ml"
version = "0.1.0"
description = ""
authors = ["Shrihari-Nair <shriharinair@htic.iitm.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
catboost = "^1.2.2"
scikit-learn = "^1.3.2"
xgboost = "1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
